<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/button_description_text_view"
            android:layout_margin="8dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_onClick_register1"
            android:textAllCaps="false"
            android:onClick="onClickButton"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_onClick_register2"
            android:textAllCaps="false"
            android:id="@+id/anonymous_class_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_onClick_register3"
            android:textAllCaps="false"
            android:id="@+id/interface_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/replace_image"
            android:textAllCaps="false"
            android:onClick="image_replace_button"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bridge"
            android:id="@+id/image_replace"
            android:contentDescription="@string/replace_image" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_progress"
            android:textAllCaps="false"
            android:onClick="progress_add_button"/>
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:max="100"
            android:id="@+id/progress_horizontal"
            android:visibility="visible"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pop_alert_dialog"
            android:textAllCaps="false"
            android:onClick="alert_dialog_pop_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pop_progress_dialog"
            android:textAllCaps="false"
            android:onClick="progress_dialog_pop_button"/>

    </LinearLayout>
</ScrollView>